kmenuedit: When the "Only show in" list is empty, remove the item from the .desktop file An empty list means "show nowhere", a missing item means "show everywhere"

BUG: 283658